# mobile-terminal

./: .env.example  .gitignore  README.md  README_zh.md  cloudflare_tunnel_mobile.sh  devbox_tunnel_mobile.sh  local_terminal.sh  run.sh
docs/: perf-baseline-phase0-after.md  perf-baseline-phase2-after.md  perf-baseline-phase2-final.md  perf-baseline-tmux-sidebar-after.md  tmux-sidebar-prototype.html
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/public/: goal-board.html  prompt-board.html  sw.js
frontend/src/: main.tsx  setup-tests.ts
frontend/src/__tests__/: goal-board.test.ts
frontend/src/components/: BranchSelector.tsx  CopyModeOverlay.tsx  GitPanel.tsx  Layout.tsx  SessionTabBar.tsx  SettingsModal.tsx  StatusBar.tsx  Terminal.tsx  TextInputModal.tsx  TmuxManager.tsx  TmuxSidebar.tsx  Toolbar.tsx
frontend/src/contexts/: ServerEventsContext.tsx  TerminalContext.tsx
frontend/src/utils/: alt-screen-transcript.ts  dump-file.ts  terminal-paste.ts  terminal-resize.ts
scripts/: perf-baseline.sh  smoke.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs  tmux_discovery.rs
server/tests/: api_basics.rs  api_git.rs  api_goal_workspace.rs  concurrent_load.rs
server/tests/common/: mod.rs
ttyd-mobile/: diff-server.py  index.html  package-lock.json  package.json
ttyd-mobile/src/: App.tsx
ttyd-mobile/src/components/: BranchSelector.tsx  DiffViewer.tsx  Layout.tsx  SessionTabBar.tsx  SettingsModal.tsx  StatusBar.tsx  Terminal.tsx  TmuxManager.tsx  Toolbar.tsx
ttyd-mobile/src/contexts/: ServerEventsContext.tsx  (+1 more)
(+11 files in other folders)
